# AgentPrime

./: .cursorrules  .env.example  .eslintrc.js  .gitignore  .npmignore  LICENSE  README.md  agent.bat  calendar_reminder.txt  jest.config.js  new_poem.txt  package-lock.json  package.json  playwright.config.js  poem.txt  start.bat  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  tsconfig.test.json  webpack.main.config.js  webpack.renderer.config.js
.github/: dependabot.yml
assets/: icon-placeholder.txt
backend/: agentprime-backend.spec  requirements.txt  run.py
checkpoints/: README.md
data/: anticipator-patterns.json  primecoder_sft.jsonl  project-registry.json
docs/: ACTIVATEPRIME_ANALYSIS.md  AGENTPRIME_AUTO_FIX_IMPROVEMENTS.md  AGENTPRIME_FIXES.md  AGENT_LOOP_FIX_2025.md  ALPHA_RELEASE.md  API.md  ARCHITECTURAL_BUILDING_CAPABILITIES.md  ARCHITECTURE_RUNTIME_GUIDE.md  BOUNDED_SPECIALIST_MATRIX.md  COMPREHENSIVE_ANALYSIS.md  CURRENT_MATURITY_ASSESSMENT.md  DEVELOPER_GUIDE.md  HYBRID_VALIDATION_SYSTEM.md  IMPLEMENTING_CURSOR_FEATURES.md  INTEGRATION_CHECK.md  LAUNCH_STUNNING_UI.md  MIGRATION_STATUS.md  MIRROR_KNOWLEDGE_GUIDE.md  MODEL_SETUP.md  OPERATOR_GUIDE.md  OPUS_REASONING_INTEGRATION.md  ORGANIZATION.md  PHASE3_IMPLEMENTATION.md  SYSTEM_ANALYSIS.md  (+21 more)
templates/python-cli/: README.md  pyproject.toml  template.json
templates/python-cli/src/: cli.py  main.py
templates/python-cli/tests/: __init__.py
templates/rust-cli/: .gitignore  Cargo.toml  README.md  template.json
templates/rust-cli/src/: lib.rs  main.rs
templates/tauri-react/src-tauri/: Cargo.toml  tauri.conf.json
templates/tauri-react/src-tauri/src/: main.rs
(+745 files in other folders)
